--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <input type="number" name="n1" id="n1"/><br>
             <label>Ingrese un numero</label>
             <input type="number" name="n2" id="n2"/><br>
-            <input type="button" value="Calcular" onclick="numSum()"/><br>
+            <input type="button" value="Calcular" onclick="numSuma()"/><br>
             <label>Resultado</label><input type="number" id="resuk" disabled/>
             </form>
             <br><br>
